--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,100;1,300&display=swap');
 
 body {
-  background-color: #2f2950;
+  width: 100%;
+  height: 100vh;
+  background: url(./components/images/globe-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
   margin: 0;
   padding: 0;
   font-family: 'Lato', sans-serif;
