--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -8,15 +8,16 @@ a {
 }
 
 /* seaarching bar */
-.search-bar {
-  float: right;
-  padding: 10px;
-  font-size: 18px;
+.input-container {
+  background-color: #dfd0d0;
+  opacity: 0.7;
+  padding: 30% 10% 20% 10%;
 }
 
-.globe-bg {
-  width: 100%;
-  height: 200px;
+.search-bar {
+  padding: 8px;
+  font-size: 16px;
+  width: 90%;
 }
 
 .title-container {
@@ -35,6 +36,8 @@ a {
 .a-card {
   background-color: #1f2545;
   padding: 10px 20px;
+  opacity: 0.9;
+  border-radius: 15px;
 }
 
 .country-image {
@@ -56,8 +59,14 @@ a {
 }
 
 @media (min-width: 768px) {
-  .globe-bg {
-    height: 400px;
+  .input-container {
+    padding: 10% 20%;
+  }
+
+  .search-bar {
+    padding: 10px;
+    font-size: 18px;
+    width: 80%;
   }
 
   .country-container {
@@ -69,6 +78,7 @@ a {
   .a-card {
     padding: 20px;
     transition: 0.2s;
+    border-radius: 20px;
   }
 
   .a-card:hover {
