Style the detail page

--- a/src/components/details/details.css
+++ b/src/components/details/details.css
@@ -1,3 +1,9 @@
+.main-container {
+    background-color: #1f2545;
+    height: 100vh;
+    opacity: 0.9;
+}
+
 .flag-container {
   padding: 10px;
   display: flex;
@@ -6,6 +12,7 @@
 }
 
 .flag-container h1 {
+  padding-top: 9%;
   text-align: center;
 }
 
@@ -41,4 +48,11 @@ span {
 
 .country-info:nth-child(even) {
   background-color: #2a263f;
+}
+
+@media (min-width: 768px) {
+    .flag-container h1 {
+        padding-top: 5%;
+        text-align: center;
+    }
 }
