--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -30,14 +30,13 @@ a {
 .country-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 3px;
 }
 
 .a-card {
   background-color: #1f2545;
+  /* background: linear-gradient(to bottom right, #1f2545, #000); */
   padding: 10px 20px;
   opacity: 0.98;
-  border-radius: 15px;
 }
 
 .country-image {
@@ -72,13 +71,11 @@ a {
   .country-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 3px;
+    /* gap: 3px; */
   }
 
   .a-card {
     padding: 20px;
-    transition: 0.2s;
-    border-radius: 20px;
     transition: 0.3s;
   }
 
