Update the background image

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 body {
   width: 100%;
   height: 100vh;
-  background: url(./components/images/globe-bg.jpg);
+  background: url(https://thumbs.dreamstime.com/z/world-map-hands-against-sky-world-map-hands-against-sky-141064218.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
