--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -10,10 +10,10 @@ a {
 /* seaarching bar */
 .input-container {
   opacity: 0.9;
-  padding: 30% 10% 20% 10%;
+  padding: 30% 10% 20%;
 }
 
-.search-bar {
+.input-container input {
   padding: 8px;
   font-size: 16px;
   width: 90%;
