Updathe the margin bottom for the country flags

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -40,6 +40,7 @@ a {
 
 .country-image {
   width: 100px;
+  margin-bottom: 10px;
 }
 
 .item-container {
@@ -89,5 +90,6 @@ a {
 
   .country-image {
     width: 130px;
+    margin-bottom: 20px;
   }
 }
