--- a/src/components/details/details.css
+++ b/src/components/details/details.css
@@ -1,7 +1,7 @@
 .main-container {
   background-color: #1f2545;
   height: 100vh;
-  opacity: 0.9;
+  opacity: 0.97;
 }
 
 .flag-container {
@@ -43,7 +43,7 @@
 span {
   position: absolute;
   left: 10px;
-  color: #000;
+  color: #a18b8b;
 }
 
 .country-info:nth-child(even) {
